from fastapi import FastAPI, WebSocket, WebSocketDisconnect
import asyncio
import json
import uvicorn
from contextlib import asynccontextmanager

from connection_manager import manager
from redis_manager import redis_manager
from grpc_client import grpc_client
import config

@asynccontextmanager
async def lifespan(app: FastAPI):

    print("Starting redis")
    await redis_manager.set_callback(handle_redis_message)
    await redis_manager.connect()
    yield

    print("Shutting down")

app = FastAPI(lifespan=lifespan)
from fastapi.middleware.cors import CORSMiddleware

app.add_middleware(
    CORSMiddleware,
    allow_origins=["*"],
    allow_credentials=True,
    allow_methods=["*"],
    allow_headers=["*"],
)


async def handle_redis_message(channel: str, data: str):
    """Callback triggered by RedisManager when a message arrives."""
    if channel.startswith("room:"):
        try:
            room_id = int(channel.split(":")[1])
            message_data = json.loads(data)
            

            if message_data.get("type") == "system_kick":
                target_user_id = message_data.get("user_id")
                print(f"Received System Kick for User {target_user_id} in Room {room_id}")
                await manager.kick_user(room_id, target_user_id)
                return


            await manager.broadcast_to_room(room_id, data)
        except Exception as e:
            print(f"Error handling redis message: {e}")

@app.websocket("/ws/{room_id}/{user_id}")
async def websocket_endpoint(websocket: WebSocket, room_id: int, user_id: int):

    await websocket.accept()

    try:

        allowed, reason = await grpc_client.validate_join(user_id, room_id)
        if not allowed:
            print(f"Join Denied for User {user_id}: {reason}")
            await websocket.close(code=1008, reason=reason)
            return


        await manager.connect(websocket, room_id, user_id)
        

        await redis_manager.subscribe(room_id)


        try:
            await grpc_client.user_joined(user_id, room_id)
        except Exception as e:
            print(f"gRPC Join/Update Error: {e}")


        active_user_ids = manager.get_active_users(room_id)
        await websocket.send_text(json.dumps({
            "type": "existing_users",
            "ids": active_user_ids
        }))


        await redis_manager.publish(room_id, {
            "type": "user_joined",
            "user_id": user_id
        })


        while True:
            data = await websocket.receive_text()
            message_data = json.loads(data)
            
            msg_type = message_data.get("type")


            if msg_type == "chat":
                content = message_data.get("content")
                
                #real time delivery using redis
                payload = {
                    "type": "chat",
                    "user_id": user_id,
                    "content": content
                }
                await redis_manager.publish(room_id, payload)
                
                #persistant message to management server
                try:
                    asyncio.create_task(grpc_client.store_message(user_id, room_id, content))
                except Exception as e:
                     print(f"gRPC Store Message Error: {e}")

            # WebRTC signal
            elif msg_type in ["offer", "answer", "candidate"]:
                # Broadcast signal
                payload = {
                    "type": msg_type,
                    "user_id": user_id,
                    "target_id": message_data.get("target_id"),
                    "data": message_data.get("data")
                }

                await redis_manager.publish(room_id, payload)

    except WebSocketDisconnect:

        print(f"User {user_id} disconnected")
        manager.disconnect(websocket)
        

        if manager.get_room_count(room_id) == 0:
            await redis_manager.unsubscribe(room_id)

        try:
            await grpc_client.user_left(user_id, room_id)
        except Exception as e:
            print(f"gRPC Leave Error: {e}")
            

        await redis_manager.publish(room_id, {
            "type": "user_left",
            "user_id": user_id
        })

if __name__ == "__main__":
    uvicorn.run("main:app", host=config.HOST, port=config.PORT, reload=True)
